# mlflow-genai-samples

./: .env.sample  .gitignore  .pre-commit-config.yaml  README.md  mlflow.sh  pyproject.toml  requirements.dev.txt  requirements.txt
dspy/: Lesson_2.ipynb  Lesson_3.ipynb  Lesson_4.ipynb  gepa_papillon.ipynb
