# Poetry-specific settings.
[project]
name = "mlflow-genai-samples"
version = "0.1.0"
description = "MLflow GenAI Samples Repository"
requires-python = "~=3.12"
readme = "README.md"
authors = []

dependencies = [
    "pydantic>=2.11.9,<3",
    "python-dateutil>=2.9.0,<3",
    "pytest-dotenv>=0.5.2,<0.6",
    "jsonschema>=4.23.0,<5",
    "mlflow>=3.3.2,<4",
    "openai>=1.107.2,<2",]

# Development dependencies of the project.
[dependency-groups]
dev = [
    "pytest>=8.4.2,<9",
    "pytest-mock>=3.15.0,<4",
    "pytest-dotenv>=0.5.2,<0.6",
    "pre-commit>=4.3.0,<5",
    "ruff>=0.13.0,<1",
    "pyright>=1.1.405,<2",
    "pytest-asyncio>=1.1.0,<2.0.0",
    "pytest-cov>=7.0.0,<8",
    "setuptools>=80.9.0,<81",
    "nbstripout>=0.8.1,<0.9",

]


[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Ruff section configures the Ruff linter and formatter.
[tool.ruff.lint]
select = ["E", "W", "F", "I", "TID"]

[tool.ruff.format]
docstring-code-format = true

[tool.pyright]
typeCheckingMode = "basic"
