# Poetry-specific settings.
[project]
name = "mlflow-genai-samples"
version = "0.1.0"
description = "MLflow GenAI Samples Repository"
requires-python = ">=3.12.0, <3.13.0"
readme = "README.md"
authors = []

dependencies = [
    "pydantic~=2.12.4",
    "python-dateutil~=2.9.0",
    "jsonschema~=4.25.1",
    "mlflow~=3.6.0",
    "openai~=2.8.0",
    "dspy~=3.0.4",
    "datasets~=4.4.1"
]

# Development dependencies of the project.
[dependency-groups]
dev = [
    "pytest~=9.0.1",
    "pytest-mock~=3.15.1",
    "pytest-dotenv~=0.5.2",
    "pre-commit~=4.4.0",
    "ruff~=0.14.5",
    "pyright~=1.1.407",
    "pytest-asyncio~=1.3.0",
    "pytest-cov~=7.0.0",
    "setuptools~=80.9.0",
    "nbstripout~=0.8.1",
    "ipykernel~=7.1.0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Ruff section configures the Ruff linter and formatter.
[tool.ruff.lint]
select = ["E", "W", "F", "I", "TID"]

[tool.ruff]
line-length = 279 # Or any other desired length

[tool.ruff.format]
docstring-code-format = true

[tool.pyright]
typeCheckingMode = "basic"
